# Kraken

./: .gitignore  DOWNLOADS.md  LICENSE.md  PUBLICATION_MANIFEST.md  README.md  pyproject.toml
app/: README.md
app-android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
app-android/app/src/main/cpp/: CMakeLists.txt  kraken_native_placeholder.cpp
app-ios/: Package.swift  README.md
app-macos/: Package.swift  README.md
app-windows/: AUDIT.md  README.md  build_windows.ps1  run_dev.sh  run_windows.bat
benchmarks/: run_torsion_stage_a.py
docs/: adamova-admission-gate-architecture.md  adamova-product-crypto-integration-consultation.md  android-build-warning-triage.md  android-chat-ux-variants.md  android-demo-evidence-audit-2026-05-24.md  android-dissertation-evidence-2026-05-30.md  android-home-ux-variants.md  android-icon-concepts.md  android-keystore-migration-plan.md  android-report-exporter-usage.md  android-research-guided-examples.md  android-research-panel-report-viewer.md  android-ui-implementation-plan.md  android-ui-reference-strategy.md  android-ux-decision-matrix.md  android-visual-qa-report.md  branch-tree-cleanup-audit.md  codex-implementation-audit.md  development-quick-start.md  dissertation-method-transfer.md  key-metrics-plan.md  kraken-attack-scenarios-evidence.md  kraken-commission-demo-scenario.md  kraken-cross-platform-copy-rules.md  kraken-crypto-implementation-plan.md  kraken-current-concept.md  kraken-demo-checklist.md  kraken-engineering-backlog.md  kraken-identity-and-unlink-policy.md  kraken-ios-consilium-audit.md  (+38 more)
(+414 files in other folders)
