[project]
name = "kraken-research-prototype"
version = "0.1.0"
description = "Research prototype for elliptic-curve diagnostics and cryptographic mesh messenger experiments"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "sympy>=1.12",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
